# bs64

./: Cargo.toml  README.md  build.rs
src/: benchmark_cli.rs  encode.rs  lib.rs  main.rs
src/avx2/: mod.rs
src/codec/: mod.rs
src/codec/avx2/: mod.rs
src/codec/simplesimd/: mod.rs
src/codecs/: mod.rs
src/codecs/avx2/: mod.rs
src/codecs/fairy/: lut.rs  mod.rs
src/codecs/safesimd/: mod.rs
src/codecs/sponge/: mod.rs
src/codecs/vanilla/: mod.rs
src/simple/: luts.rs  mod.rs
tests/: test_static.rs
