[package]
name = "bs64"
authors = [ "ozgb" ]
version = "0.1.0"
edition = "2021"

[features]
cli = ["dep:clap", "dep:rand", "dep:data-encoding", "dep:base64"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0.49"
# For CLI benachmarking
base64 = {version = "0.21.0", optional = true}
data-encoding = {version = "2.3.3", optional = true}
rand = {version = "0.8.5", optional = true}
clap = { version="4.4.6", features=["derive"], optional = true }

[dev-dependencies]
data-encoding = "2.3.3"
rand = {version = "0.8.5", features = ["small_rng", "alloc"]}
